# fullerton_assessment

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  constants.py  main.py
app/api/: routes.py
app/core/: configs.py
app/schemas/: __init__.py  error.py  ocr.py
app/services/: ocr.py
docs/: fullerton_ocr.postman_collection.json
tests/: test_ocr.py  test_ocr_schemas.py  test_ocr_service.py
